--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -77,7 +77,7 @@ body {
     }
 
 
-    #own-video-container {
+    .own-video-container {
       position: absolute;
       right: 10px;
       bottom: 10px;
@@ -89,6 +89,16 @@ body {
         max: { width: 80px; height: 80px; }
         min: { width: 80px; height: 80px; }
       }
+    }
+
+    .end-call-btn {
+      border: none;
+      width: 80px !important;
+      height: 40px;
+      border-radius: 20px;
+      background: hsl(15deg, 80%, 50%);
+      font-size: 24px;
+      color: #fff;
     }
   }
 }
