react hyrdates client after ssr, bundle splitting not working

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,5 @@ head
 body
   div#entry-point
     !=html
+  script(type="text/javascript" src="/dist/vendor.js")
+  script(type="text/javascript" src="/dist/app.js")
