--- a/views/index.pug
+++ b/views/index.pug
@@ -3,5 +3,7 @@ head
 body
   div#entry-point
     !=html
+  script(type="text/javascript")
+    | window.__APOLLO_STATE__ = #{state};
   script(type="text/javascript" src="/dist/vendor.js")
   script(type="text/javascript" src="/dist/app.js")
