--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,6 @@
 head
   title Node Video Chat
+  link(href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet")
   link(rel="stylesheet" href="/dist/app.css")
 body
   div#entry-point
