--- a/src/client/styles/login.scss
+++ b/src/client/styles/login.scss
@@ -2,24 +2,20 @@
 
 .login-container {
   width: 100%;
-  height: 100%;
-
-  .login-wrapper {
-    height: unquote('calc(100% - #{$top-bar-height})');
-  }
+  height: unquote('calc(100% - #{$top-bar-height})');
 
   .login {
     background: $white;
     border-radius: 15px;
     border-bottom: 2px solid fade-out($light-grey, .5);
     box-shadow: 0px 0px 2px fade-out($light-grey, .3);
-    margin-bottom: 20px;
-    padding: 30px;
-    width: 300px;
+    margin-bottom: 30px;
+    height: 350px;
+    width: 350px;
 
     .login-heading {
       font-size: 32px;
-      margin-bottom: 10px;
+      margin: 30px 0 10px;
     }
 
     .sub-heading {
@@ -36,7 +32,7 @@
     }
 
     button {
-      margin-top: 10px;
+      margin-top: 25px;
     }
   }
 }
