--- a/src/client/styles/signup.scss
+++ b/src/client/styles/signup.scss
@@ -2,24 +2,20 @@
 
 .signup-container {
   width: 100%;
-  height: 100%;
-
-  .signup-wrapper {
-    height: unquote('calc(100% - #{$top-bar-height})');
-  }
+  height: unquote('calc(100% - #{$top-bar-height})');
 
   .signup {
     background: $white;
     border-radius: 15px;
     border-bottom: 2px solid fade-out($light-grey, .5);
     box-shadow: 0px 0px 2px fade-out($light-grey, .3);
+    height: 450px;
     margin-bottom: 20px;
-    padding: 30px;
     width: 350px;
 
     .signup-heading {
       font-size: 32px;
-      margin-bottom: 10px;
+      margin: 30px 0 10px;
     }
 
     .sub-heading {
@@ -30,13 +26,17 @@
       }
     }
 
+    .loader-container {
+      height: 200px;
+    }
+
     input {
       margin-bottom: 15px;
       width: 240px;
     }
 
     button {
-      margin-top: 10px;
+      margin-top: 25px;
     }
   }
 }
