--- a/src/client/styles/topbar.scss
+++ b/src/client/styles/topbar.scss
@@ -1,6 +1,6 @@
 @import './base';
 
-.auth-top-bar {
+.topbar {
   background: $white;
   box-shadow: 0px 1px 2px fade-out($light-grey, .5);
   height: $top-bar-height;
