--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ head
   title Node Video Chat
   link(href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet")
   link(rel="stylesheet" href="/dist/app.css")
+  meta(name="viewport" content="width=device-width, initial-scale=1")
 body
   div#entry-point
     !=html
