--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,7 @@
 head
   title Node Video Chat
   link(href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet")
+  link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
   link(rel="stylesheet" href="/dist/app.css")
   meta(name="viewport" content="width=device-width, initial-scale=1")
 body
