--- a/src/client/styles/layout.scss
+++ b/src/client/styles/layout.scss
@@ -7,8 +7,11 @@
   top: 0;
   bottom: 0;
 
-  > .flex-center {
-    height: unquote('calc(100% - #{$top-bar-height})');
+  > .flex-center,
+  > .app-content {
+    height: $app-content-height;
+    overflow-x: hidden;
+    width: 100%;
   }
 
   .mobile-text {
