--- a/src/client/styles/navlink.scss
+++ b/src/client/styles/navlink.scss
@@ -8,7 +8,7 @@
 
   i {
     color: lighten($grey, 15%);
-    margin-bottom: 10px;
+    margin-bottom: 7px;
     font-size: 22px;
 
     &:hover {
@@ -19,8 +19,17 @@
   &.active {
     border-bottom: 3px solid $webchat-orange;
 
+    &:hover {
+      cursor: default;
+      filter: none;
+    }
+
     i {
       color: $webchat-orange;
+
+      &:hover {
+        text-shadow: none;
+      }
     }
   }
 }
