--- a/src/client/styles/sidebar.scss
+++ b/src/client/styles/sidebar.scss
@@ -4,7 +4,7 @@
   box-shadow: -1px 0px 2px $light-grey;
   height: 100%;
   min-width: 300px;
-  width: 25px;
+  width: 25%;
 
   .sidebar-children-container {
     height: 100%;
