--- a/src/client/styles/sidebar.scss
+++ b/src/client/styles/sidebar.scss
@@ -4,10 +4,10 @@
   box-shadow: -1px 0px 2px $light-grey;
   height: 100%;
   min-width: 300px;
+  overflow-y: hidden;
   width: 25%;
 
   .sidebar-children-container {
     height: 100%;
-    overflow-y: scroll;
   }
 }
