--- a/src/client/styles/_vars.scss
+++ b/src/client/styles/_vars.scss
@@ -2,12 +2,14 @@ $background-grey: #f9f9f9;
 $black: #000;
 $dark-text: #333;
 $desktop: (min-width: 768px);
+$error-red: #f76a82;
+$error-text: lighten($error-red, 30%);
 $grey: #999;
 $input-grey: #666;
-$kanit: 'Montserrat';
 $light-grey: #ddd;
 $mobile: (max-width: 767px);
-$roboto: 'Open Sans';
+$montserrat: 'Montserrat';
+$open-sans: 'Open Sans';
 $small-device: (max-device-width: 767px);
 $top-bar-height: 40px;
 $webchat-orange: #f1ba4a;
