--- a/src/client/styles/helpers.scss
+++ b/src/client/styles/helpers.scss
@@ -67,7 +67,7 @@
 .webchat-text {
   @include webchat-gradient('background', 0deg);
   -webkit-text-fill-color: transparent;
-  font-family: $kanit;
+  font-family: $montserrat;
   -webkit-background-clip: text;
 }
 
