--- a/src/client/styles/layout.scss
+++ b/src/client/styles/layout.scss
@@ -18,4 +18,11 @@
     font-size: 16px;
     margin-bottom: 30px;
   }
+
+  .banner-container {
+    left: 0;
+    right: 0;
+    position: absolute;
+    top: 41px;
+  }
 }
