--- a/src/client/styles/notice-bar.scss
+++ b/src/client/styles/notice-bar.scss
@@ -1,25 +1,25 @@
 @import './base';
 
-.error-bar {
-  background: $error-red;
+.notice-bar {
+  @include webchat-gradient('background', 220deg);
   box-shadow: 0px 0px 3px $light-grey;
   padding: 5px 0;
   z-index: 5000;
 
-  .error {
+  .notice {
     flex-basis: 100%;
     margin-left: 40px;
 
     span {
-      color: $error-text;
+      color: $white;
     }
   }
 
-  .clear-error {
+  .clear-notice {
     width: 40px;
 
     button {
-      color: $error-text;
+      color: $white;
       font-size: 18px;
     }
   }
