contact request graphql type and notification count graphic

--- a/src/client/styles/_vars.scss
+++ b/src/client/styles/_vars.scss
@@ -9,6 +9,7 @@ $input-grey: #666;
 $light-grey: #ddd;
 $mobile: (max-width: 767px);
 $montserrat: 'Montserrat';
+$notif-red: #af3533;
 $open-sans: 'Open Sans';
 $small-device: (max-device-width: 767px);
 $top-bar-height: 40px;
