--- a/src/client/styles/navlink.scss
+++ b/src/client/styles/navlink.scss
@@ -4,6 +4,7 @@
   align-items: flex-end;
   border-bottom: 3px solid $white;
   height: 100%;
+  position: relative;
   width: (1 / 3) * 100%;
 
   i {
@@ -31,5 +32,19 @@
         text-shadow: none;
       }
     }
+  }
+
+  .notifs {
+    background: darken($webchat-magenta, 10%);
+    border-radius: 9px;
+    box-shadow: -1px 1.25px 1px fade-out($black, .9);
+    color: $white;
+    font-size: 11px;
+    padding: 2px 3px;
+    position: absolute;
+    right: unquote('calc(50% - 20px)');
+    text-align: center;
+    top: 3px;
+    width: 12px;
   }
 }
