--- a/src/client/styles/error-bar.scss
+++ b/src/client/styles/error-bar.scss
@@ -2,7 +2,7 @@
 
 .error-bar {
   background: $error-red;
-  box-shadow: 0px 0px 3px $light-grey;
+  box-shadow: 0px 0px 3px fade-out($black, .7);
   padding: 5px 0;
   z-index: 5000;
 
