--- a/src/client/styles/notice-bar.scss
+++ b/src/client/styles/notice-bar.scss
@@ -2,9 +2,12 @@
 
 .notice-bar {
   @include webchat-gradient('background', 220deg);
-  box-shadow: 0px 0px 3px $light-grey;
   padding: 5px 0;
   z-index: 5000;
+
+  &.shadow {
+    box-shadow: 0px 0px 3px fade-out($black, .7);
+  }
 
   .notice {
     flex-basis: 100%;
