--- a/views/index.pug
+++ b/views/index.pug
@@ -9,5 +9,6 @@ body
     !=html
   script(type="text/javascript")
     | window.__APOLLO_STATE__ = !{state};
+    | window.__JWT_TOKEN__ = !{token};
   script(type="text/javascript" src="/dist/vendor.js")
   script(type="text/javascript" src="/dist/app.js")
