--- a/src/client/styles/pending-contact-request.scss
+++ b/src/client/styles/pending-contact-request.scss
@@ -4,7 +4,7 @@
   border-bottom: 1px solid $light-grey;
   justify-content: space-between;
   min-height: 56px;
-  padding: 0 12px 0 8px;
+  padding: 3px 12px 3px 8px;
   width: unquote('calc(100% - 20px)');
 
   .user-info {
@@ -23,6 +23,8 @@
     .email {
       color: $grey;
       font-size: 10px;
+      max-width: 150px;
+      word-wrap: break-word;
     }
   }
 
