contacts search and styling contact list

--- a/src/client/styles/contact-list.scss
+++ b/src/client/styles/contact-list.scss
@@ -1,12 +1,8 @@
 @import './base';
 
 .contact-list-container {
-  .contact-list-heading {
-    border-bottom: 1px solid $light-grey;
-    padding: 4px 0;
-
-    .webchat-text {
-      font-size: 14px;
-    }
+  .contact-list {
+    max-height: unquote('calc(100% - 106px)');
+    overflow-y: scroll;
   }
 }
