--- a/src/client/styles/contact.scss
+++ b/src/client/styles/contact.scss
@@ -40,7 +40,7 @@
       width: 30px;
 
       &:hover {
-        box-shadow: 0 0 3px $light-grey;
+        box-shadow: 0 0 3px $grey;
       }
 
       i {
