--- a/src/client/styles/contact-list.scss
+++ b/src/client/styles/contact-list.scss
@@ -3,6 +3,6 @@
 .contact-list-container {
   .contact-list {
     max-height: unquote('calc(100% - 106px)');
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
