no contacts( requests) ui

--- a/src/client/styles/contact-list.scss
+++ b/src/client/styles/contact-list.scss
@@ -5,4 +5,13 @@
     max-height: unquote('calc(100% - 106px)');
     overflow-y: auto;
   }
+
+  .no-contacts {
+    margin-top: 40px;
+
+    button {
+      margin-top: 15px;
+      width: 140px;
+    }
+  }
 }
