visual aesthetic of message input

--- a/src/client/styles/_vars.scss
+++ b/src/client/styles/_vars.scss
@@ -2,6 +2,7 @@ $available-green: #94da7f;
 $background-grey: #f9f9f9;
 $black: #000;
 $dark-text: #333;
+$dark-grey: #666;
 $desktop: (min-width: 768px);
 $error-red: #f76a82;
 $error-text: lighten($error-red, 30%);
