--- a/src/client/styles/open-message-thread-headroom.scss
+++ b/src/client/styles/open-message-thread-headroom.scss
@@ -3,9 +3,9 @@
 .open-message-thread-headroom {
   background: $white;
   border-bottom: solid 1px $light-grey;
-  height: 48px;
   justify-content: space-between;
   margin-top: 2px;
+  min-height: 48px;
 
   .open-message-thread-user {
     margin-left: 15px;
@@ -20,7 +20,8 @@
   }
 
   button {
-    font-size: 32px;
+    color: $webchat-orange;
+    font-size: 24px;
     margin-right: 7px;
   }
 }
