--- a/src/client/styles/message-input.scss
+++ b/src/client/styles/message-input.scss
@@ -1,48 +1,101 @@
 @import './base';
 
-.message-input {
-  background: $white;
-  // border-top: 1px solid $light-grey;
-  box-shadow: 0px -1px 3px $light-grey;
-  min-height: 125px;
-  padding: 8px 3px 6px 10px;
 
-  textarea {
-    color: $dark-grey;
-    background: $background-grey;
-    border-radius: 10px;
+.message-input-wrapper {
+  margin-bottom: 50px;
+  padding: 10px;
+
+  .message-input {
+    align-items: flex-end;
+    background: $white;
+    border-radius: 25px;
     border: 1px solid $light-grey;
-    box-shadow: inset 0px 0px 3px $light-grey;
-    font-size: 12px;
-    max-height: 75px;
-    outline: none  !important;
-    padding: 4px;
-    width: 88%;
-  }
+    padding: 8px 12px 8px;
+    width: 100%;
 
-  .message-send-button-container {
-    width: 12%;
+    textarea {
+      border: 0;
+      box-sizing: border-box;
+      color: $dark-grey;
+      font-size: 14px;
+      outline: none  !important;
+      margin-bottom: 4px;
+      max-height: 150px;
+      resize: none;
+      width: 90%;
+    }
 
-    button {
-      @include webchat-gradient('background', 0deg);
-      border-radius: 50%;
-      height: 30px;
-      padding: 0px 3px 0px 0px;
-      width: 30px;
+    .message-send-button-container {
+      width: 12%;
 
-      i {
-        color: $white;
-      }
+      button {
+        @include webchat-gradient('background', 0deg);
+        border-radius: 50%;
+        height: 30px;
+        padding: 0px 3px 0px 0px;
+        width: 30px;
 
-      &:hover {
-        &:not(:disabled) {
-          box-shadow: 0px 0px 3px $light-grey;
+        i {
+          color: $white;
         }
-      }
 
-      &:disabled {
-        background: $light-grey;
+        &:hover {
+          &:not(:disabled) {
+            box-shadow: 0px 0px 3px $light-grey;
+          }
+        }
+
+        &:disabled {
+          background: $light-grey;
+        }
       }
     }
   }
 }
+
+// .message-input {
+//   background: $white;
+//   // border-top: 1px solid $light-grey;
+//   box-shadow: 0px -1px 3px $light-grey;
+//   min-height: 125px;
+//   padding: 8px 3px 6px 10px;
+
+//   textarea {
+//     color: $dark-grey;
+//     background: $background-grey;
+//     border-radius: 10px;
+//     border: 1px solid $light-grey;
+//     box-shadow: inset 0px 0px 3px $light-grey;
+//     font-size: 12px;
+//     max-height: 75px;
+//     outline: none  !important;
+//     padding: 4px;
+//     width: 88%;
+//   }
+
+//   .message-send-button-container {
+//     width: 12%;
+
+//     button {
+//       @include webchat-gradient('background', 0deg);
+//       border-radius: 50%;
+//       height: 30px;
+//       padding: 0px 3px 0px 0px;
+//       width: 30px;
+
+//       i {
+//         color: $white;
+//       }
+
+//       &:hover {
+//         &:not(:disabled) {
+//           box-shadow: 0px 0px 3px $light-grey;
+//         }
+//       }
+
+//       &:disabled {
+//         background: $light-grey;
+//       }
+//     }
+//   }
+// }
