--- a/src/client/styles/open-messages.scss
+++ b/src/client/styles/open-messages.scss
@@ -1,5 +1,28 @@
 @import './base';
 
-.open-messages {
+.open-messages-container {
   flex-grow: 2;
+  overflow: hidden;
+  position: relative;
+
+  .open-messages {
+    bottom: 0;
+    left: 0;
+    overflow-y: scroll;
+    padding: 5px 12px 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  &:after {
+    bottom: 0;
+    box-shadow: inset 0 -4px 4px $background-grey;
+    content: ' ';
+    left: 0;
+    pointer-events: none;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
 }
