display read at time in text chat

--- a/src/client/styles/open-message.scss
+++ b/src/client/styles/open-message.scss
@@ -6,16 +6,22 @@
     border-radius: 15px;
     box-shadow: 0px 2px 2px fade-out($light-grey, .6);
     color: $dark-grey;
-    margin-bottom: 7px;
+    margin-bottom: 2px;
     padding: 10px;
   }
 
   &.sent-by-current-user {
-    justify-content: flex-end;
+    align-items: flex-end;
 
     .message {
       background: $webchat-orange;
       color: $white;
     }
+  }
+
+  .read-at-message {
+    color: $grey;
+    font-size: 10px;
+    margin-bottom: 7px;
   }
 }
