--- a/src/client/styles/open-message.scss
+++ b/src/client/styles/open-message.scss
@@ -1,6 +1,8 @@
 @import './base';
 
 .open-message-wrapper {
+  align-items: flex-start;
+
   .message {
     background: lighten($light-grey, 5%);
     border-radius: 15px;
