--- a/src/client/styles/open-messages.scss
+++ b/src/client/styles/open-messages.scss
@@ -9,7 +9,7 @@
     bottom: 0;
     left: 0;
     overflow-y: scroll;
-    padding: 10px 12px 0;
+    padding: 10px 12px 3px;
     position: absolute;
     right: 0;
     top: 0;
