unread message sort

--- a/src/client/styles/message-thread.scss
+++ b/src/client/styles/message-thread.scss
@@ -10,10 +10,25 @@
   }
 
   .message-thread {
+    background: darken($background-grey, 2%);
     border-bottom: 1px solid $light-grey;
     justify-content: space-between;
     min-height: 56px;
     padding: 3px 8px;
     width: unquote('calc(100% - 16px)');
+
+    .formatted-date {
+      color: $dark-grey;
+      font-size: 12px;
+      margin-right: 3px;
+    }
+
+    &.unread-message {
+      background: $white;
+
+      * {
+        font-weight: 900;
+      }
+    }
   }
 }
