video chat container only shows up when user is logged in

--- a/src/client/styles/video-chat-container.scss
+++ b/src/client/styles/video-chat-container.scss
@@ -1,7 +1,7 @@
 @import './base';
 
 .video-chat-container {
-  background: $grey;
+  background: $dark-grey;
   height: 100%;
   min-width: 300px;
   width: 75%;
