initial exchange of peer ids over socket.io

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,7 @@ head
   meta(name="viewport" content="width=device-width, initial-scale=1")
 body
   div#entry-point
+    !=html
   script(type="text/javascript")
     | window.__APOLLO_STATE__ = !{state};
     | window.__JWT_TOKEN__ = !{token};
