new message indicator works for when thread is created

--- a/src/client/styles/message-threads.scss
+++ b/src/client/styles/message-threads.scss
@@ -2,6 +2,6 @@
 
 .message-threads {
   @include calc('max-height', '100% - 77px');
-  overflow-y: scroll;
+  overflow-y: auto;
   padding-bottom: 3px;
 }
