--- a/src/client/styles/contact-requests-search-results.scss
+++ b/src/client/styles/contact-requests-search-results.scss
@@ -5,7 +5,7 @@
   border-bottom: 1px solid $light-grey;
   left: 0;
   max-height: unquote('calc(100% - 107px)');
-  overflow-y: scroll;
+  overflow-y: auto;
   position: absolute;
   right: 0;
   z-index: 500;
