--- a/src/client/styles/_mixins.scss
+++ b/src/client/styles/_mixins.scss
@@ -14,3 +14,7 @@
   font-family: $montserrat;
   -webkit-background-clip: text;
 }
+
+@mixin video-chat-background-gradient {
+  background: linear-gradient(0deg, $input-grey, $dark-grey);
+}
