--- a/src/client/styles/_vars.scss
+++ b/src/client/styles/_vars.scss
@@ -1,8 +1,8 @@
 $available-green: #94da7f;
 $background-grey: #f9f9f9;
 $black: #000;
-$dark-text: #333;
-$dark-grey: #666;
+$darker-grey: #333;
+$dark-grey: #444;
 $desktop: (min-width: 768px);
 $error-red: #f76a82;
 $error-text: lighten($error-red, 30%);
