--- a/src/client/styles/user-info.scss
+++ b/src/client/styles/user-info.scss
@@ -2,11 +2,7 @@
 
 .user-info {
   img {
-    border-radius: 50%;
-    border: 1px solid $webchat-magenta;
-    height: 40px;
-    margin-right: 10px;
-    width: 40px;
+    @include user-info-img;
   }
 
   .username {
