--- a/src/client/styles/video-chat-controller.scss
+++ b/src/client/styles/video-chat-controller.scss
@@ -17,7 +17,7 @@
     vertical-align: top;
 
     .hangup-button {
-      background: darken($error-red, 10%);
+      background: linear-gradient(180deg, darken($error-red, 15%), darken($webchat-magenta, 5%));
       border: 1.5px solid $white;
       border-radius: 50%;
       position: relative;
