--- a/src/client/styles/video-chat-receiving-call.scss
+++ b/src/client/styles/video-chat-receiving-call.scss
@@ -1,6 +1,6 @@
 @import './base';
 
-.video-chat-calling {
+.video-chat-receiving-call {
   @include video-chat-background-gradient;
 
   .calling-contact {
@@ -16,6 +16,10 @@
       font-size: 16px;
       margin-bottom: 20px;
       text-align: center;
+    }
+
+    .accept-button {
+      margin-right: 20px;
     }
   }
 }
