message sound plays (not in safari)

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,7 @@ head
   link(rel="stylesheet" href="/dist/app.css")
   meta(name="viewport" content="width=device-width, initial-scale=1")
 body
+  audio#message-sound(style="display:none;" src="/audio/message.mp3")
   div#entry-point
     !=html
   script(type="text/javascript")
