--- a/src/client/styles/message-input.scss
+++ b/src/client/styles/message-input.scss
@@ -22,6 +22,7 @@
     padding: 8px 12px 8px;
 
     textarea {
+      background: transparent;
       border: 0;
       box-sizing: border-box;
       color: $dark-grey;
