--- a/src/client/styles/settings-form-row.scss
+++ b/src/client/styles/settings-form-row.scss
@@ -1,9 +1,10 @@
 @import './base';
 
 .settings-form-row {
-  @include calc('width', '100% - 20px');
+  @include calc('width', '100% - 30px');
   border-bottom: 1px solid $light-grey;
-  padding: 15px 10px;
+  height: 70px;
+  padding: 15px;
 
   .label {
     margin-bottom: 5px;
@@ -21,7 +22,7 @@
       border-bottom: 1px solid $webchat-orange;
       border-bottom-width: 1px;
       box-shadow: none;
-      padding: 5px 0px;
+      padding: 5px 0;
       width: 50%;
 
       &:focus {
@@ -31,7 +32,7 @@
 
     .value {
       color: $darker-grey;
-      font-size: 16;
+      font-size: 14px;
     }
 
     .edit-button {
