qa some ui and sound effects

--- a/src/client/styles/_mixins.scss
+++ b/src/client/styles/_mixins.scss
@@ -4,6 +4,12 @@
   #{$property}: unquote('calc(#{$string})');
 }
 
+@mixin ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 @mixin webchat-gradient($property, $deg) {
   #{$property}: linear-gradient($deg, $webchat-orange, $webchat-magenta);
 }
