--- a/src/client/styles/settings-form-row.scss
+++ b/src/client/styles/settings-form-row.scss
@@ -31,8 +31,10 @@
     }
 
     .value {
+      @include ellipsis;
       color: $darker-grey;
       font-size: 14px;
+      max-width: 50%;
     }
 
     .edit-button {
