--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,5 @@
 head
-  title Node Video Chat
+  title WebChat
   link(href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet")
   link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
   link(rel="stylesheet" href="/dist/app.css")
